--- a/W2-Bootstrap with Git Exercises/aboutus.html
+++ b/W2-Bootstrap with Git Exercises/aboutus.html
@@ -125,7 +125,7 @@ body{
            </div>
            <div class="row justify-content-center">             
                 <div class="col-auto">
-                    <p>Â© Copyright 2018 Ristorante Con Fusion</p>
+                    <p>© Copyright 2018 Ristorante Con Fusion</p>
                 </div>
            </div>
         </div>
